# AbyssalEngine

./: pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
fabula_charsheet/: custom_pdf.py  main.py  pdf_export.py
fabula_charsheet/.streamlit/: config.toml
fabula_charsheet/characters/: characters.json
fabula_charsheet/data/: __init__.py  compendium.py  database.py  saved_characters.py  society.db
fabula_charsheet/pages/: controller.py  login.py
fabula_charsheet/pages/character_creation/: preview.py
fabula_charsheet/pages/character_view/: loader.py  view.py
fabula_charsheet/pages/utils/: admin_panel.py  common.py  dice_roller.py  view_page_actions.py
