[project]
name = "abyssal-engine"
version = "0.1.0"
description = "Fabula Ultima Charsheet"
readme = "README.md"
requires-python = ">=3.10, <4.0"   # <--- ADD THE "<4.0" HERE
dependencies = [
    "pydantic>=2.11.7",
    "pandas>=2.0.0",
    "reportlab>=4.0.0",
    "pypdf>=6.6.2",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "streamlit>=1.47.0",
]

[project.scripts]
fabula_charsheet = "fabula_charsheet.main:main"

[tool.poetry]
package-mode = false
